@@ -1,3 +1,7 @@
+2004-05-04  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Extended attributes support for 2.4 (patch by Cody Pisto)
+	
 2004-04-20  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Fixed parser with modversions (Mattias Wadman)
